--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://victor:Sao%40jose01@ttp-gym.hukbb4u.mongodb.net/
+MONGO_URI=mongodb+srv://victor:ncZEhPQLV8Tp9tOh@ttp-gym.hukbb4u.mongodb.net/
 COLLECTION_NAME="Users"
 API_KEY=""
