--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-MONGO_URI="mongodb+srv://tithiagorodrigues:MgepFYvvz5j15lhW>@ttp-gym.hukbb4u.mongodb.net/"
-DB_NAME=""
+MONGO_URI=mongodb+srv://victor:ncZEhPQLV8Tp9tOh@ttp-gym.hukbb4u.mongodb.net/
 COLLECTION_NAME="Users"
-API_KEY=""
